Got table up. Still working on book adding button

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     </head>
 
     <body>
-        <div id="book-container">
-            
+        <h1>My Wonderful Library!</h1>
+        <div id="book-container"></div>
+        <div id="after-books">
+            <button class='btn-nrm' id='new-book'>New Book</button>
+            <div id='new-book-container'></div>
         </div>
         <script src="./js/main.js" defer></script>
     </body>
